<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.main.bottom_bar.profile.edit.EditProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/urbanist_700"
            android:text="@string/title_edit_profile_fragment"
            android:textColor="#212121"
            android:textSize="24sp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="24dp">

                <ImageView
                    android:id="@+id/img_edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:elevation="2dp"
                    android:src="@drawable/ic_edit"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="60dp">

                    <ImageView
                        android:id="@+id/img_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/person_placeholder" />

                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <EditText
                android:id="@+id/edit_name_first_name"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:hint="@string/text_edit_first_name_edit_profile_fragment"
                android:inputType="textPersonName"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/edit_surname"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:hint="@string/text_edit_surname_edit_profile_fragment"
                android:inputType="textPersonName"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/edit_email"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:clickable="false"
                android:enabled="false"
                android:inputType="textEmailAddress"
                android:textColor="@color/disabled"
                tools:ignore="Autofill"
                tools:text="mock@email.com" />

            <EditText
                android:id="@+id/edit_phone_number"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:hint="@string/text_edit_phone_number_edit_profile_fragment"
                android:inputType="phone"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/edit_gender"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:hint="@string/text_edit_gender_edit_profile_fragment"
                android:inputType="textPersonName"
                tools:ignore="Autofill" />


            <EditText
                android:id="@+id/edit_country"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:hint="@string/text_edit_country_edit_profile_fragment"
                android:inputType="textPersonName"
                tools:ignore="Autofill" />

            <ImageView
                android:id="@+id/progress_loading"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:visibility="gone"
                tools:ignore="ContentDescription"
                tools:src="@drawable/loading"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btn_update"
                style="@style/ThemePrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/button_text_update_edit_profile_fragment"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>